# interview-scheduler-cursor

./: .gitignore  README.md  pyproject.toml
interview_scheduler/: __init__.py  calendar.py  cli.py  config.py  csv_utils.py  emailer.py  exceptions.py  models.py  scheduler.py  template_manager.py
interview_scheduler/templates/: email_template.html  email_template.txt
interview_scheduler/utils/: __init__.py  dates.py  prompts.py
tests/: __init__.py
